--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Input files
+input/
+
 # Source: https://github.com/github/gitignore/blob/main/Python.gitignore 
 
 # Byte-compiled / optimized / DLL files
